--- a/pipelines/loggregator/on-demand-logs.yml
+++ b/pipelines/loggregator/on-demand-logs.yml
@@ -43,8 +43,8 @@ jobs:
       BBL_GCP_REGION: us-central1
       BBL_STATE_DIR: gcp/on-demand-logs
       BBL_IAAS: gcp
-      BBL_LB_CERT: {{coconut_director_cert}}
-      BBL_LB_KEY: {{coconut_director_key}}
+      BBL_LB_CERT: {{coconut_bbl_lb_cert}}
+      BBL_LB_KEY: {{coconut_bbl_lb_key}}
       BBL_ENV_NAME: on-demand-logs
       LB_DOMAIN: odl.loggr.cf-app.com
   - put: deployments-loggregator
