--- a/pipelines/loggregator/release.yml
+++ b/pipelines/loggregator/release.yml
@@ -21,7 +21,7 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry/loggregator.git
-    branch: &backport-branch v70.x
+    branch: &backport-branch back-ports/1.10
     private_key: {{loggregator-key}}
 
 - name: loggregator-final-release-develop
@@ -322,7 +322,7 @@ jobs:
         S3_ACCESS_KEY: {{s3-access-key}}
         S3_SECRET_KEY: {{s3-secret-key}}
         SSH_KEY: {{loggregator-key}}
-        NEW_VERSION: 70.2
+        NEW_VERSION: 77.2
         BRANCH_NAME: *backport-branch
       inputs:
       - name: loggregator-backport
