--- a/tasks/staging/setup-cf.yml
+++ b/tasks/staging/setup-cf.yml
@@ -4,10 +4,10 @@ image_resource:
   source:
     repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
 params:
-  SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-  VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
-  ORG: cf-lamb
-  SPACE: development
+  SYSTEM_DOMAIN:
+  VARS_STORE_FILE:
+  ORG:
+  SPACE:
 inputs:
 - name: vars-store
 - name: loggregator-tools
