--- a/tasks/get-cf-admin-credentials.yml
+++ b/tasks/get-cf-admin-credentials.yml
@@ -10,21 +10,10 @@ image_resource:
 params:
   VARS_STORE_FILE:
 run:
-  path: ruby
+  path: bash
   args:
-    - -e
+    - -c
     - |
-      #!/usr/bin/env ruby
-      def load_or_raise(name)
-        value = ENV[name]
-        if value.nil?
-          raise MissingRequiredEnvironmentVariable.new(name)
-        end
-        value
-      end
-      vars_file_path = load_or_raise('VARS_STORE_FILE')
-      password = `bosh int vars-store/#{vars_file_path} --path=/cf_admin_password`.chomp
-
-      File.open('cf-credentials/password', 'w') do |f|
-        f.write(password)
-      end
+      set -ex
+      password=`bosh int vars-store/$VARS_STORE_FILE --path=/cf_admin_password`
+      echo "$password" > cf-credentials/password
