Revert "Fix errors in firehose-reliability-test"
This reverts commit 428b1c19c23b0f91aec11556c6a7585ccdff4e9c.

--- a/tasks/get-cf-admin-credentials.yml
+++ b/tasks/get-cf-admin-credentials.yml
@@ -10,10 +10,21 @@ image_resource:
 params:
   VARS_STORE_FILE:
 run:
-  path: bash
+  path: ruby
   args:
-    - -c
+    - -e
     - |
-      set -ex
-      password=`bosh int vars-store/$VARS_STORE_FILE --path=/cf_admin_password`
-      echo "$password" > cf-credentials/password
+      #!/usr/bin/env ruby
+      def load_or_raise(name)
+        value = ENV[name]
+        if value.nil?
+          raise MissingRequiredEnvironmentVariable.new(name)
+        end
+        value
+      end
+      vars_file_path = load_or_raise('VARS_STORE_FILE')
+      password = `bosh int vars-store/#{vars_file_path} --path=/cf_admin_password`.chomp
+
+      File.open('cf-credentials/password', 'w') do |f|
+        f.write(password)
+      end
