--- a/pipelines/loggregator/staging.yml
+++ b/pipelines/loggregator/staging.yml
@@ -252,77 +252,79 @@ jobs:
     - get: loggregator-ci
     - get: 30m
       trigger: true
-  - task: get-release-version
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-      - name: release-elect
-      outputs:
-      - name: release-info
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #/bin/bash
-          set -ex
+  - aggregate:
+    - do:
+      - task: get-release-version
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: loggregator/base
+          inputs:
+          - name: release-elect
+          outputs:
+          - name: release-info
+          run:
+            path: bash
+            args:
+            - -c
+            - |
+              #/bin/bash
+              set -ex
 
-          cd release-elect
-          git rev-parse HEAD > ../release-info/version
-  - task: cf-logs
-    file: loggregator-ci/tasks/staging/cf-logs-smoke-test.yml
-    input_mapping:
-      vars-store: deployments-loggregator-with-changes
-    params:
-      PREFIX: "staging."
-      CYCLES: 10000
-      DELAY: "2"
-      DELAY_UNIT: "us"
-      MESSAGE: "FIFTEEN-MINUTE"
-      APP_NAME: "floodspinner"
-      WAIT: 60
-      API_ENDPOINT: api.staging.loggr.cf-app.com
-      USERNAME: admin
-      DATADOG_API_KEY: {{datadog-dev-api-key}}
-      VARS_STORE_FILE: gcp/staging/deployment-vars.yml
-  - task: http-drain
-    file: loggregator-ci/tasks/cf-syslog-drain-smoke-test-with-vars.yml
-    input_mapping:
-      vars-store: deployments-loggregator-with-changes
-    params:
-      CF_ORG: cf-lamb
-      CF_SPACE: development
-      CF_APP_DOMAIN: staging.loggr.cf-app.com
-      CF_SYSTEM_DOMAIN: staging.loggr.cf-app.com
-      CF_USERNAME: admin
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-      DRAIN_VERSION: "2.0"
-      DRAIN_TYPE: "https"
-      JOB_NAME: "https-teardown"
-      TEARDOWN: false
-      VARS_STORE_FILE: gcp/staging/deployment-vars.yml
-    timeout: 20m
-  - task: tcp-drain
-    file: loggregator-ci/tasks/cf-syslog-drain-smoke-test-with-vars.yml
-    input_mapping:
-      vars-store: deployments-loggregator-with-changes
-    params:
-      CF_ORG: cf-lamb
-      CF_SPACE: development
-      CF_APP_DOMAIN: tcp.staging.loggr.cf-app.com
-      CF_SYSTEM_DOMAIN: staging.loggr.cf-app.com
-      CF_USERNAME: admin
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-      DRAIN_VERSION: "2.0"
-      DRAIN_TYPE: "syslog"
-      JOB_NAME: "syslog-teardown"
-      TEARDOWN: true
-      VARS_STORE_FILE: gcp/staging/deployment-vars.yml
-    timeout: 20m
+              cd release-elect
+              git rev-parse HEAD > ../release-info/version
+      - task: cf-logs
+        file: loggregator-ci/tasks/staging/cf-logs-smoke-test.yml
+        input_mapping:
+          vars-store: deployments-loggregator-with-changes
+        params:
+          PREFIX: "staging."
+          CYCLES: 10000
+          DELAY: "2"
+          DELAY_UNIT: "us"
+          MESSAGE: "FIFTEEN-MINUTE"
+          APP_NAME: "floodspinner"
+          WAIT: 60
+          API_ENDPOINT: api.staging.loggr.cf-app.com
+          USERNAME: admin
+          DATADOG_API_KEY: {{datadog-dev-api-key}}
+          VARS_STORE_FILE: gcp/staging/deployment-vars.yml
+    - task: http-drain
+      file: loggregator-ci/tasks/cf-syslog-drain-smoke-test-with-vars.yml
+      input_mapping:
+        vars-store: deployments-loggregator-with-changes
+      params:
+        CF_ORG: cf-lamb
+        CF_SPACE: development
+        CF_APP_DOMAIN: staging.loggr.cf-app.com
+        CF_SYSTEM_DOMAIN: staging.loggr.cf-app.com
+        CF_USERNAME: admin
+        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        DRAIN_VERSION: "2.0"
+        DRAIN_TYPE: "https"
+        JOB_NAME: "https-teardown"
+        TEARDOWN: false
+        VARS_STORE_FILE: gcp/staging/deployment-vars.yml
+      timeout: 20m
+    - task: tcp-drain
+      file: loggregator-ci/tasks/cf-syslog-drain-smoke-test-with-vars.yml
+      input_mapping:
+        vars-store: deployments-loggregator-with-changes
+      params:
+        CF_ORG: cf-lamb
+        CF_SPACE: development
+        CF_APP_DOMAIN: tcp.staging.loggr.cf-app.com
+        CF_SYSTEM_DOMAIN: staging.loggr.cf-app.com
+        CF_USERNAME: admin
+        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        DRAIN_VERSION: "2.0"
+        DRAIN_TYPE: "syslog"
+        JOB_NAME: "syslog-teardown"
+        TEARDOWN: true
+        VARS_STORE_FILE: gcp/staging/deployment-vars.yml
+      timeout: 20m
 
 - name: firehose-reliability
   serial_groups:
