Add missing vars store config for task
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/loggregator/loggregator.yml
+++ b/pipelines/loggregator/loggregator.yml
@@ -364,6 +364,7 @@ jobs:
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
     params:
       BBL_STATE_DIR: gcp/coconut-bbl
+      VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
 
 - name: loggregator-deploy
   serial: true
